# Plush

./: .gitignore  CMakeLists.txt  README.md  comp  main
config/: ApplyInit.c  ApplyInit.h  CheckConfigFile.c  CheckConfigFile.h  ConfigOptions.h  ShellVars.h
global-lua/: CheckDirContent.lua
lua/: CheckDirContent.lua  DefaultPrompt.lua
src/: constants.h  main.c  prompt.c  prompt.h  shell.c  shell.h
src/config/: ApplyInit.c  ApplyInit.h  CheckConfigFile.c  ExistsInConfig.c  ExistsInConfig.h
src/core-utils/: CoreUtils.h  ExposeCoreUtils.c  ExposeUtils.c  cat.lua  core.h  ls.lua
src/def-plugins/: autocomplete.c
src/def-plugins/autocomplete/: autocomplete.c  autocomplete.lua
src/def-plugins/syntax-highlight/: syntax.c  syntax.h
src/def-plugins/tab-completion/: tabcomp.lua  tabcomplete.c  tabcomplete.h
src/history/: History.c  History.h  history.c
